# ProtoLLM

./: .gitignore  LICENSE  README.md  README.rst  README_en.rst  definitions.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  (+1 more)
protollm-synthetic/: README.md  pyproject.toml
protollm-synthetic/examples/: aspect_summarisation_example.py  free_query_example.py  quiz_example.py  rag_example.py  summarisation_example.py  synthetic_rag_query_example.py
protollm-synthetic/protollm_synthetic/: utils.py
protollm-synthetic/protollm_synthetic/synthetic_pipelines/: chains.py  genetic_evolver.py  prompts.py  schemes.py
protollm-synthetic/tests/: test_summarization_chain.py
protollm-synthetic/tmp_data/: data.json  gen_questions.csv  gen_questions.json  rag_generated.pickle  sample_data_city_rag.json  sample_data_city_rag_generated.json  sample_data_free_instruction.json  sample_data_rag.json  tmp_sample_summarization_dataset.json
protollm_tools/llm-agents-api/: .env.example  README.md  docker-compose.yml  pyproject.toml
protollm_tools/llm-agents-api/examples/: admin-config.yml  main.py  main_local.py
protollm_tools/llm-agents-api/examples/pipelines/: mock_background_agent.py  rag_agent.py  rag_pipeline.py  utils.py
protollm_tools/llm-agents-api/protollm_agents/: configs.py  entrypoint.py
protollm_tools/llm-agents-api/protollm_agents/api/: rest_agents.py  socket_agents.py
protollm_tools/llm-agents-api/protollm_agents/models/: models.py  requests.py  responses.py  schemas.py
protollm_tools/llm-agents-api/protollm_agents/sdk/: __init__.py  agents.py  base.py  context.py  events.py  models.py  vector_stores.py
protollm_tools/llm-agents-api/protollm_agents/sdk/pipelines/: ansimble_router_pipeline.py  ensemble_router_pipeline.py  router_pipeline.py
protollm_tools/llm-agents-api/protollm_agents/services/: agents_manager.py  cache_client.py  db_client.py  exceptions.py  socket_connector.py  storage.py
protollm_tools/llm-agents-api/tests/: .env.test.example  config.test.yml  conftest.py  docker-compose.test.yml  test_api.py
protollm_tools/llm-agents-api/tests/docs/: col_data_ed.json  col_data_env.json
protollm_tools/llm-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  unit_config.json
protollm_tools/llm-api/protollm_api/: config.py
protollm_tools/llm-api/protollm_api/backend/: endpoints.py
protollm_tools/llm-api/tests/: conftest.py
protollm_tools/llm-api/tests/integration/: test_with_llm.py
protollm_tools/llm-api/tests/unit_tests/: test_endpoints.py
protollm_tools/llm-worker/: Dockerfile  Dockerfile.outer_llm  main.py  pyproject.toml  requirements_outer_llm.txt
protollm_tools/llm-worker/deployment/: docker-compose.outer_llm.yml  docker-compose.yml
protollm_tools/llm-worker/protollm_worker/: config.py
protollm_tools/llm-worker/protollm_worker/models/: cpp_models.py  open_api_llm.py
protollm_tools/sdk/: README.md  pyproject.toml  requirements.txt
protollm_tools/sdk/examples/: celery.py
protollm_tools/sdk/protollm_sdk/celery/: config.py  job.py
protollm_tools/sdk/protollm_sdk/jobs/: job.py  job_context.py  job_invoke.py  llm_api.py
protollm_tools/sdk/protollm_sdk/models/: errors.py  job_context_models.py
protollm_tools/sdk/protollm_sdk/object_interface/: __init__.py  rabbit_mq_wrapper.py
protollm_tools/sdk/protollm_sdk/utils/: reddis.py
protollm_tools/sdk/tests/job/: test_job.py  test_job_invoke.py  test_llm_api.py  test_text_embedder.py
protollm_tools/sdk/tests/object_interface/: test_redis_wrapper.py
protollm_tools/sdk/tests/protollm_sdk/celery/: test_app.py
protollm_tools/sdk/tests/protollm_sdk/job/: test_job.py  test_job_invoke.py  test_llm_api.py  test_outer_llm_api.py  test_result_storage.py  test_text_embedder.py  test_utility.py  test_vector_db.py
protollm_tools/sdk/tests/protollm_sdk/models/: test_job_context.py
protollm_tools/sdk/tests/protollm_sdk/object_interface/: test_rabbit_mq_wrapper.py
protollm_tools/sdk/tests/stairs_sdk/: test_utils.py
protollm_tools/sdk/tests/stairs_sdk/job/: test_job.py  test_result_storage.py
standalone_tools/llm-core/: Dockerfile  README.md  pyproject.toml
standalone_tools/llm-core/deployment/: cluster.env  docker-compose.yml
standalone_tools/llm-core/protollm_llm_core/: main.py
standalone_tools/llm-core/protollm_llm_core/models/: base.py  cpp_models.py  open_api_llm.py  vllm_models.py
standalone_tools/llm-core/protollm_llm_core/services/: broker.py
standalone_tools/llm-core/stairs_llm_core/: main.py
standalone_tools/llm-core/stairs_llm_core/models/: cpp_models.py  vllm_models.py
standalone_tools/llm-core/stairs_llm_core/services/: broker.py
(+294 files in other folders)
