[tool.poetry]
name = "ProtoLLM"
version = "0.1.0"
description = ""
authors = ["aimclub"]
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
pydantic = "^2.7.4"
celery = "^5.4.0"
kombu = "^5.3.7"
uuid = "^1.30"
redis = "^5.0.6"
flower = "^2.0.1"
pika = "^1.3.2"
urllib3 = "^2.2.2"
requests = "^2.32.3"
fastapi = "^0.111.0"
pydantic-core = "2.23.4"
langchain = "^0.3.4"
httpx = "^0.27.0"
openai = "^1.42.0"
tornado = "^6.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
