[tool.poetry]
name = "protollm-api"
version = "1.0.0"
description = ""
authors = ["aimclub"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.5"
pika = "^1.3.2"
pydantic = "^2.7.4"
flower = "2.0.1"

protollm_sdk = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.24.0"
