[tool.poetry]
name = "protollm-worker"
version = "1.0.0"
description = ""
authors = ["aimclub"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.5"
pika = "^1.3.2"
pydantic = "^2.7.4"
protollm_sdk = "^1.0.0"

[tool.poetry.group.outer_llm.dependencies]
openai = "^1.42.4"

[toll.poetry.group.vllm.dependencies]
vllm = "^0.6.4.post1"

[toll.poetry.group.llama-cpp.dependencies]
llama-cpp-python = "^0.3.3"

[tool.poetry.extras]
outer_llm = ["openai"]
vllm = ["vllm"]
llama-cpp = ["llama-cpp-python"]