[tool.poetry]
name = "stairs-llm-core"
version = "0.3.1"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.5"
pika = "^1.3.2"
pydantic = "^2.7.4"
protollm_sdk = "^1.0.0"
vllm = "^0.6.4.post1"

[toll.poetry.llama-cpp]
llama-cpp-python = "^0.1.9"
